--- a/ukwiecona/index.html
+++ b/ukwiecona/index.html
@@ -2,48 +2,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Strona w przygotowaniu...</title>
-    <meta name="description" content="Numer 1 w polskim hostingu. Domeny, serwery, konta e-mail. Jakość potwierdzona certyfikatem ISO 9001:2000" />
-    <meta name="keywords" content="serwer www, konto email, sklep internetowy, skrypty cgi, domena, domeny" />
-    <link href="homepl/gfx/style.css" rel="stylesheet" type="text/css" />
-    <!--[if IE]>
-    <link href="homepl/gfx/ie.css" rel="stylesheet" type="text/css" media="all" />
-<![endif]-->
-    <!--[if lte IE 6]>
-    <link href="homepl/gfx/ie.css" rel="stylesheet" type="text/css" media="all" />
-<![endif]-->
+    <meta charset="UTF-8">>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Warszawa - florystyka na każdą okazję - oferuję wykonanie bukietów ślubnych, wystroju sali oraz samochodu, bukiecików i wianków komunijnych oraz wiele więcej">
+    <meta name="keywords" content="Warszawa florystyka, kwiaty warszawa, kwiaty ślub warszawa, kwiaty komunia warszawa, kwiaty pogrzeb warszawa">
+    <meta name="author" content="Klaudia Wójciak"
+    
+    <title>Ukwiecona - kwiaty na każdą okazję</title>
+
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 
 <body>
 
-    <div id="Container">
-        <div id="main">
-            <div id="mainContent">
-                <img src="homepl/gfx/strona-w-przygotowaniu.png" alt="Strona w przygotowaniu..." />
-            </div>
-            <div id="links">Opcje dostępne dla administratora, bądź uprawnionego użytkownika usługi:</div>
-            <div id="wrapper">
-                <a id="poczta" class="new" href="https://poczta.home.pl" title="Czytaj pocztę">
-                    <span>Czytaj pocztę</span>
-                </a>
-                <a id="uslugi" class="new" href="https://panel.home.pl" title="Zarządzaj usługami">
-                    <span>Zarządzaj usługami</span>
-                </a>
-            </div>
-        </div>
-        <div id="footer">Strona utrzymywana na serwerach
-            <a href="https://home.pl">
-                <span style="color: rgb(0, 0, 0); font-weight: bold;">hom<span class="red">e</span>.pl</span>
-            </a>.
-            <br/>
-            <a href="https://home.pl/domeny" title="Domeny">Domeny</a>|
-            <a href="https://home.pl/hosting" title="Hosting">Hosting</a>|
-            <a href="https://home.pl/poczta" title="Poczta">Poczta e-mail</a>|
-            <a href="https://home.pl/sklepy" title="Sklepy internetowe">Sklepy internetowe</a>|
-            <a href="https://home.pl/ssl" title="Certyfikaty SSL">Certyfikaty SSL</a>
-        </div>
-    </div>
+    
 
 </body>
 
