--- a/ukwiecona/index.html
+++ b/ukwiecona/index.html
@@ -10,10 +10,42 @@
     
     <title>Ukwiecona - kwiaty na każdą okazję</title>
 
+    <link href="https://fonts.googleapis.com/css?family=Marck+Script|Play" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 
 <body>
+    <section class="header-background">
+        <div class="header-tag">
+            <div class="header-tag-front">
+                <img alt="Ukwiwecona logo" src="/img/logo.svg">
+                <h2>Florystyka na każdą okazję</h2>
+                <h3>Oferuję wykonanie bukietów ślubnych, wystroju sali oraz samochodu, 
+                    bukiecikó i wianków komunijnych oraz wiele więcej.</p>
+            </div>
+            <div class="header-tag-back">
+                <img alt="Ukwiwecona logo" src="/img/logo.svg">
+                <h1>Agnieszka Wójciak</h1>
+                <p>Florystka z 18-letnim doświadczeniem. Ukończyła Szkołę Ogrodniczą. 
+                    Pracowała w wielu Warszawskich kwiaciarniach.</p>
+            </div>
+            <button>Moje prace</button>
+            <button>Usługi</button>
+            <button>Kontakt</button>
+        </div>
+    </section>
+    <section class="gallery">
+        <h1>Moje prace</h1>
+        <p>Poniżej znajdziesz kilka z moich prac. Uwieczniona została, niestety, 
+            tylko mała część mojej 18-letniej pracy. Dotknij zdjęcie, jeżeli chcesz 
+            je powiększyć i zobaczyć inne z tego samego wydarzenia.</p>
+    </section>
+    <section class="services">
+        <h1>Usługi</h1>
+    </section>
+    <section class="contact">
+        <h1>Kontakt</h1>
+    </section>
 
     
 
