Finished typography and vertical rhythm mixins

--- a/ukwiecona/index.html
+++ b/ukwiecona/index.html
@@ -19,13 +19,13 @@
         <div class="header-tag">
             <div class="header-tag-front">
                 <img alt="Ukwiwecona logo" src="/img/logo.svg">
-                <h2>Florystyka na każdą okazję</h2>
+                <h1 class="tag">Florystyka na każdą okazję</h2>
                 <h3>Oferuję wykonanie bukietów ślubnych, wystroju sali oraz samochodu, 
                     bukiecikó i wianków komunijnych oraz wiele więcej.</p>
             </div>
             <div class="header-tag-back">
                 <img alt="Ukwiwecona logo" src="/img/logo.svg">
-                <h1>Agnieszka Wójciak</h1>
+                <h1 class="tag">Agnieszka Wójciak</h1>
                 <p>Florystka z 18-letnim doświadczeniem. Ukończyła Szkołę Ogrodniczą. 
                     Pracowała w wielu Warszawskich kwiaciarniach.</p>
             </div>
@@ -35,16 +35,16 @@
         </div>
     </section>
     <section class="gallery">
-        <h1>Moje prace</h1>
+        <h1 class="header-bar">Moje prace</h1>
         <p>Poniżej znajdziesz kilka z moich prac. Uwieczniona została, niestety, 
             tylko mała część mojej 18-letniej pracy. Dotknij zdjęcie, jeżeli chcesz 
             je powiększyć i zobaczyć inne z tego samego wydarzenia.</p>
     </section>
     <section class="services">
-        <h1>Usługi</h1>
+        <h1 class="header-bar">Usługi</h1>
     </section>
     <section class="contact">
-        <h1>Kontakt</h1>
+        <h1 class="header-bar">Kontakt</h1>
     </section>
 
     
