Finished header section appearance, work on tag animation

--- a/ukwiecona/index.html
+++ b/ukwiecona/index.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta charset="UTF-8">>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Warszawa - florystyka na każdą okazję - oferuję wykonanie bukietów ślubnych, wystroju sali oraz samochodu, bukiecików i wianków komunijnych oraz wiele więcej">
     <meta name="keywords" content="Warszawa florystyka, kwiaty warszawa, kwiaty ślub warszawa, kwiaty komunia warszawa, kwiaty pogrzeb warszawa">
-    <meta name="author" content="Klaudia Wójciak"
+    <meta name="author" content="Klaudia Wójciak">
     
     <title>Ukwiecona - kwiaty na każdą okazję</title>
 
@@ -15,36 +15,45 @@
 </head>
 
 <body>
-    <section class="header-background">
+    <section class="header background">
         <div class="header-tag">
+            <img class="tag-img" src="img/tag.svg">
             <div class="header-tag-front">
-                <img alt="Ukwiwecona logo" src="/img/logo.svg">
-                <h1 class="tag">Florystyka na każdą okazję</h2>
-                <h3>Oferuję wykonanie bukietów ślubnych, wystroju sali oraz samochodu, 
-                    bukiecikó i wianków komunijnych oraz wiele więcej.</p>
-            </div>
-            <div class="header-tag-back">
-                <img alt="Ukwiwecona logo" src="/img/logo.svg">
-                <h1 class="tag">Agnieszka Wójciak</h1>
-                <p>Florystka z 18-letnim doświadczeniem. Ukończyła Szkołę Ogrodniczą. 
-                    Pracowała w wielu Warszawskich kwiaciarniach.</p>
-            </div>
+                <div style="display: none;">
+                    <img class="logo" alt="Ukwiwecona logo" src="/img/logo.svg">
+                    <h1 class="tag">Florystyka na każdą okazję</h1>
+                    <h3 class="tag">Oferuję wykonanie bukietów ślubnych, wystroju sali oraz samochodu, 
+                        bukiecików i wianków komunijnych oraz wiele więcej.</h3>
+                    <div class="localization">
+                        <img alt="Lokalizacja" src="img/localization-pin.svg">
+                        <p>Warszawa</p>
+                    </div>    
+                </div>
+                <div class="header-tag-back" >
+                    <img class="portrait-picture" alt="Agnieszka Wójciak" src="/img/agnieszka-wojciak.jpg">
+                    <h1 class="tag">Agnieszka Wójciak</h1>
+                    <h3 class="tag">Florystka z 18-letnim doświadczeniem. Ukończyła Szkołę Ogrodniczą. 
+                        Pracowała w wielu Warszawskich kwiaciarniach.</h3>
+                </div>
+            </div> 
+        </div> 
+        <div class="header-buttons">      
             <button>Moje prace</button>
             <button>Usługi</button>
             <button>Kontakt</button>
         </div>
     </section>
     <section class="gallery">
-        <h1 class="header-bar">Moje prace</h1>
+        <div class="header-bar"><h1>Moje prace</h1></div>
         <p>Poniżej znajdziesz kilka z moich prac. Uwieczniona została, niestety, 
             tylko mała część mojej 18-letniej pracy. Dotknij zdjęcie, jeżeli chcesz 
             je powiększyć i zobaczyć inne z tego samego wydarzenia.</p>
     </section>
     <section class="services">
-        <h1 class="header-bar">Usługi</h1>
+        <div class="header-bar"><h1>Usługi</h1></div>
     </section>
     <section class="contact">
-        <h1 class="header-bar">Kontakt</h1>
+        <div class="header-bar"><h1>Kontakt</h1></div>
     </section>
 
     
