Improvements in the composition and layout of header elements.

--- a/ukwiecona/index.html
+++ b/ukwiecona/index.html
@@ -17,25 +17,26 @@
 <body>
     <section class="header background">
         <div class="header-tag">
-            <img class="tag-img" src="img/tag.svg">
-            <div class="header-tag-front">
-                <div style="display: none;">
-                    <img class="logo" alt="Ukwiwecona logo" src="/img/logo.svg">
-                    <h1 class="tag">Florystyka na każdą okazję</h1>
-                    <h3 class="tag">Oferuję wykonanie bukietów ślubnych, wystroju sali oraz samochodu, 
-                        bukiecików i wianków komunijnych oraz wiele więcej.</h3>
-                    <div class="localization">
-                        <img alt="Lokalizacja" src="img/localization-pin.svg">
-                        <p>Warszawa</p>
-                    </div>    
-                </div>
-                <div class="header-tag-back" >
-                    <img class="portrait-picture" alt="Agnieszka Wójciak" src="/img/agnieszka-wojciak.jpg">
-                    <h1 class="tag">Agnieszka Wójciak</h1>
-                    <h3 class="tag">Florystka z 18-letnim doświadczeniem. Ukończyła Szkołę Ogrodniczą. 
-                        Pracowała w wielu Warszawskich kwiaciarniach.</h3>
-                </div>
-            </div> 
+            <div class="tag-container">
+                <div>
+                    <div class="header-tag-front">
+                        <img class="logo" alt="Ukwiwecona logo" src="/img/logo.svg">
+                        <h1 class="tag">Florystyka na każdą okazję</h1>
+                        <h3 class="tag">Oferuję wykonanie bukietów ślubnych, wystroju sali oraz samochodu, 
+                            bukiecików i wianków komunijnych oraz wiele więcej.</h3>
+                        <div class="localization">
+                            <img alt="Lokalizacja" src="img/localization-pin.svg">
+                            <p>Warszawa</p>
+                        </div>    
+                    </div>
+                    <div class="header-tag-back"  style="display: none;"" >
+                        <img class="portrait-picture" alt="Agnieszka Wójciak" src="/img/agnieszka-wojciak.jpg">
+                        <h1 class="tag">Agnieszka Wójciak</h1>
+                        <h3 class="tag">Florystka z 18-letnim doświadczeniem. Ukończyła Szkołę Ogrodniczą. 
+                            Pracowała w wielu Warszawskich kwiaciarniach.</h3>
+                    </div>
+                </div> 
+            </div>
         </div> 
         <div class="header-buttons">      
             <button>Moje prace</button>
