Finished filter in gallery slider

--- a/ukwiecona/index.html
+++ b/ukwiecona/index.html
@@ -54,9 +54,9 @@
             je powiększyć i zobaczyć inne z tego samego wydarzenia.</h2>
         </div>
         <div class="gallery-background">
-            <div class="gallery-flter">
+            <div>
                 <span>Filtruj: </span>
-                <select name="gallery-filter">
+                <select  class="gallery-filter" name="gallery-filter">
                     <option>Wszystkie</option>
                     <option>Ślub</option>
                     <option>Święta</option>
