--- a/ukwiecona/index.html
+++ b/ukwiecona/index.html
@@ -145,27 +145,22 @@
             na którą potrzebujesz kwiaty.</h2>
         </div>
         <div class="contact-container">
-            <form>
-                <div class="email-row">
-                    <input type="text" name="email" placeholder="E-mail">
-                    <input type="text" name="name" placeholder="Imię">
-                </div>
-                <input type="text" name="message-subject" placeholder="Temat wiadomości">
-                <select name="occaasion">
-                    <option value="0">Wybierz okazję</option>
-                    <option value="Ślub">Ślub</option>
-                    <option value="Święta">Święta</option>
-                    <option value="Urodziny">Urodziny</option>
-                    <option value="Komunia">Komunia</option>
-                    <option value="Pogrzeb">Pogrzeb</option>
-                    <option value="Inna">Inna</option>
-                </select>
-                <textarea rows="5" placeholder="Treść wiadomości"></textarea>
+            <form id="contact-form" method="POST" action="mail.php">
+                <input class="check" name="user-name" type="text" placeholder="Imię">
+                <input class="check email" type="text" name="user-email" placeholder="Adres email">
+                <textarea class="check" name="user-message" rows="5" placeholder="Treść wiadomości"></textarea>
                 <div class="submit-row">
-                    <div class="g-recaptcha" data-sitekey="6Lf924oUAAAAAOVQsyXX7qyrXs9ndbOxgHKCOIsj"></div>
+                    <input type="hidden" id="captcha" name="captcha" value="">
+                    <div class="g-recaptcha" data-callback="captchaCallback" data-sitekey="6Lf924oUAAAAAOVQsyXX7qyrXs9ndbOxgHKCOIsj"></div>
                     <input type="submit" value="Wyślij">
                 </div>
             </form>
+            <div id="error-message">
+                <p>Wypełnij poprawnie wszystkie pola!</p>
+            </div>
+            <div id="success-message">
+                <p>Wiadomość została wysłana!</p>
+            </div>
         </div>    
     </section>
     <footer>
@@ -184,8 +179,14 @@
                 <a href="tel:604915651">604 915 651</a>
             </div>
         </div>
+        
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
         <script src="js/base.js" type="text/javascript"></script>
         <script src="js/slider.js" type="text/javascript"></script>
+        <script src="mail.php" type="text/php"></script>
+        <script src="js/ajax.js"></script>
+        <script src="js/re-captcha.js"></script>
+        <script src="js/form-validation.js"></script>
     </footer>  
 
 </body>
