--- a/ukwiecona/index.html
+++ b/ukwiecona/index.html
@@ -48,13 +48,25 @@
     </section>
     <section class="gallery">
         <div class="header-bar first"><h1>Moje prace</h1></div>
-        <div class="description">
-            <h2>Poniżej znajdziesz kilka z moich prac. Uwieczniona została, niestety, 
-            tylko mała część mojej 18-letniej pracy. Dotknij zdjęcie, jeżeli chcesz 
-            je powiększyć i zobaczyć inne z tego samego wydarzenia.</h2>
-        </div>
         <div class="gallery-background">
-            <div>
+            <div class="description">
+                <h2>Poniżej znajdziesz kilka z moich prac. Uwieczniona została, niestety, 
+                tylko mała część mojej 18-letniej pracy. Dotknij zdjęcie, jeżeli chcesz 
+                je powiększyć i zobaczyć inne z tego samego wydarzenia.</h2>
+            </div>
+            <!-- The Modal -->
+<div id="myModal" class="modal">
+
+    <!-- The Close Button -->
+    <span class="close">&times;</span>
+  
+    <!-- Modal Content (The Image) -->
+    <img class="modal-content" id="img01">
+  
+    <!-- Modal Caption (Image Text) -->
+    <div id="caption"></div>
+  </div>
+            <div class="filter-wrapper">
                 <span>Filtruj: </span>
                 <select  class="gallery-filter" name="gallery-filter">
                 </select>
@@ -139,29 +151,31 @@
     </section>
     <section class="contact">
         <div class="header-bar"><h1>Kontakt</h1></div>
-        <div class="description">
-            <h2>Jeżeli masz jakieś pytania lub chcesz poprosić o wycenę - nie krępuj się :)
-            Bardzo mi pomoże, jeżeli podasz jak najwięcej szczegółów dotyczących okazji,
-            na którą potrzebujesz kwiaty.</h2>
-        </div>
-        <div class="contact-container">
-            <form id="contact-form" method="POST" action="mail.php">
-                <input class="check" name="user-name" type="text" placeholder="Imię">
-                <input class="check email" type="text" name="user-email" placeholder="Adres email">
-                <textarea class="check" name="user-message" rows="5" placeholder="Treść wiadomości"></textarea>
-                <div class="submit-row">
-                    <input type="hidden" id="captcha" name="captcha" value="">
-                    <div class="g-recaptcha" data-callback="captchaCallback" data-sitekey="6Lf924oUAAAAAOVQsyXX7qyrXs9ndbOxgHKCOIsj"></div>
-                    <input type="submit" value="Wyślij">
+        <div class="contact-background">
+            <div class="description">
+                <h2>Jeżeli masz jakieś pytania lub chcesz poprosić o wycenę - nie krępuj się :)
+                Bardzo mi pomoże, jeżeli podasz jak najwięcej szczegółów dotyczących okazji,
+                na którą potrzebujesz kwiaty.</h2>
+            </div>
+            <div class="contact-container">
+                <form id="contact-form" method="POST" action="mail.php">
+                    <input class="check" name="user-name" type="text" placeholder="Imię">
+                    <input class="check email" type="text" name="user-email" placeholder="Adres email">
+                    <textarea class="check" name="user-message" rows="5" placeholder="Treść wiadomości"></textarea>
+                    <div class="submit-row">
+                        <input type="hidden" id="captcha" name="captcha" value="">
+                        <div class="g-recaptcha" data-callback="captchaCallback" data-sitekey="6Lf924oUAAAAAOVQsyXX7qyrXs9ndbOxgHKCOIsj"></div>
+                        <input type="submit" value="Wyślij">
+                    </div>
+                </form>
+                <div id="error-message">
+                    <p>Wypełnij poprawnie wszystkie pola!</p>
                 </div>
-            </form>
-            <div id="error-message">
-                <p>Wypełnij poprawnie wszystkie pola!</p>
-            </div>
-            <div id="success-message">
-                <p>Wiadomość została wysłana!</p>
-            </div>
-        </div>    
+                <div id="success-message">
+                    <p>Wiadomość została wysłana!</p>
+                </div>
+            </div> 
+        </div>   
     </section>
     <footer>
         <div class="footer-container">
@@ -183,6 +197,7 @@
         <script src="https://www.google.com/recaptcha/api.js" async defer></script>
         <script src="js/base.js" type="text/javascript"></script>
         <script src="js/slider.js" type="text/javascript"></script>
+        <script src="js/modal.js" type="text/javascript"></script>
         <script src="mail.php" type="text/php"></script>
         <script src="js/ajax.js"></script>
         <script src="js/re-captcha.js"></script>
