--- a/ukwiecona/index.html
+++ b/ukwiecona/index.html
@@ -20,9 +20,8 @@
     <section class="header background">
         <div class="header-tag">
             <div class="tag-container">
-                <div>
+                <div class="tag-wrapper">
                     <div class="header-tag-front">
-                        <img class="logo" alt="Ukwiwecona logo" src="/img/logo.svg">
                         <h1 class="tag">Florystyka na każdą okazję</h1>
                         <h3 class="tag">Oferuję wykonanie bukietów ślubnych, wystroju sali oraz samochodu, 
                             bukiecików i wianków komunijnych oraz wiele więcej.</h3>
